# PJATK-quick-game-project

./: CMakeLists.txt  README.md
entity/: ball.cpp  ball.hpp  coin.cpp  coin.hpp  collidable.hpp  enemy.cpp  enemy.hpp  enemy_ball.cpp  enemy_ball.hpp  entity.cpp  entity.hpp  entity_living.cpp  entity_living.hpp  follow_component.cpp  follow_component.hpp  hitbox_controller.cpp  hitbox_controller.hpp  movement_controller.cpp  player.cpp
game/: game.cpp  game.hpp  game_over_state.cpp  game_over_state.hpp  game_utils.cpp  game_utils.hpp  gameplay_state.cpp  gameplay_state.hpp  main_menu_state.cpp  main_menu_state.hpp  state_base.hpp
gfx/: animation_controller.cpp  button.cpp  button.hpp  coin_counter.cpp  coin_counter.hpp  gui_counter.cpp  gui_counter.hpp  hp_counter.cpp  hp_counter.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
res/map/: map.txt
